@@ -3,6 +3,7 @@ SubVersion: $Id$
 - 01/06/2005, version 2.00-rc3:
 	- [roms] $1462: fixed bug #1212619.
 	- [roms] $1467: fixed ON key
+	- [roms] $14xx: prepared resizing of window
 	
 - 31/05/2005, version 2.00-rc2:
 	- [kevin] $1357/1362: added support for disassembling ER_throw
